# moses-authexec

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
data/: Makefile  Makefile.am  Makefile.in  org.isoft.ExecScripts.conf.in  org.isoft.ExecScripts.policy.in  org.isoft.ExecScripts.service  org.isoft.ExecScripts.service.in  org.moses.AuthExec.conf.in  org.moses.AuthExec.policy.in  org.moses.AuthExec.service.in
exec.d/: Makefile.am  README  authexecd.conf  demo.sh  glib-schema.sh  upweb.sh
src/: Makefile  Makefile.am  Makefile.in  authexec.c  daemon.c  execscripts-client  execscripts-service  execscripts-service-glue.h  execscripts-service.c  execscripts-service.xml  main.c  org.moses.authexec.xml
src/.deps/: example-client.Po  example-service.Po  execscripts-client.Po  execscripts-service.Po
